--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div id="particles-section" class="container">
-            <h1>MONTA_CREATE(仮)</h1>
+            <h1>MONTA_CREATE</h1>
             <p>Webデザイナー / フロントエンドエンジニア</p>
             <nav>
                 <ul>
