--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
             <div class="portfolio-grid">
                 <div class="portfolio-item fade-in">
                     <img src="img/page2.png" alt="Project 1">
+                    <h3><a href="project1.html">プロジェクト名 1</a></h3>
+                    <p>このプロジェクトではレスポンシブ対応のLPを制作しました。</p>
+                </div>
+                <div class="portfolio-item fade-in">
+                    <img src="img/page2.png" alt="Project 1">
+                    <h3><a href="project2.html">プロジェクト名 1</a></h3>
+                    <p>このプロジェクトではレスポンシブ対応のLPを制作しました。</p>
+                </div>
+                <div class="portfolio-item fade-in">
+                    <img src="img/page2.png" alt="Project 1">
+                    <h3><a href="project3.html">プロジェクト名 1</a></h3>
+                    <p>このプロジェクトではレスポンシブ対応のLPを制作しました。</p>
+                </div>
+                <div class="portfolio-item fade-in">
+                    <img src="img/page2.png" alt="Project 1">
                     <h3><a href="page2.html">プロジェクト名 1</a></h3>
                     <p>このプロジェクトではレスポンシブ対応のLPを制作しました。</p>
                 </div>
